<resources>
    <string name="app_name">2020Project</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up">Sign Up</string>
</resources>
